tests/fixtures/invalid/pow_set_bool_bytes.py
# Cannot call pow() with Set[int], Bool, Bytes
x = pow({1, 2, 3}, True, b"hello")
